Fix audio and image source paths in index.html

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 <body>
 
     <audio id="bgMusic" loop>
-        <source src="/backgroundMusic/BackgroundMusic.mp3" type="audio/mpeg">
+        <source src="backgroundMusic/BackgroundMusic.mp3" type="audio/mpeg">
     </audio>
 
     <div class="container">
@@ -274,7 +274,7 @@
                     <div class="bfly"></div>
                     <div class="bfly"></div>
                 </div>
-                <img src="/images/RoseImage.png" alt="Rose" class="artistic-rose">
+                <img src="images/RoseImage.png" alt="Rose" class="artistic-rose">
                 <div class="stem">
                     <div class="leaf left" style="--r: -15deg"></div>
                     <div class="leaf right" style="--r: 190deg"></div>
@@ -286,7 +286,7 @@
                     <div class="bfly"></div>
                     <div class="bfly"></div>
                 </div>
-                <img src="/images/RoseImage.png" alt="Rose" class="artistic-rose">
+                <img src="images/RoseImage.png" alt="Rose" class="artistic-rose">
                 <div class="stem">
                     <div class="leaf left" style="--r: -20deg"></div>
                 </div>
@@ -297,7 +297,7 @@
                     <div class="bfly"></div>
                     <div class="bfly"></div>
                 </div>
-                <img src="/images/RoseImage.png" alt="Rose" class="artistic-rose">
+                <img src="images/RoseImage.png" alt="Rose" class="artistic-rose">
                 <div class="stem">
                     <div class="leaf right" style="--r: 195deg"></div>
                 </div>
