Update hover guide text to 'Tap the roses'

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 <div class="card-face card-face-back">
                     <h1 style="color: #e03e52;">I Love You!</h1>
                     <div style="font-size: 3rem; margin-top: 10px;">❤️</div>
-                    <div class="hover-guide">Hover the rose for butterflies 🦋</div>
+                    <div class="hover-guide">Tap the roses for butterflies 🦋</div>
                 </div>
             </div>
         </div>
